2009-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestWorkbenchWindow.cs: Track API
	  changes.

2009-04-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added
	  test for "Bug 429034 - Class alias completion not working
	  properly".

2009-04-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Addded
	  test for "Bug 493202 - List References on private
	  constructor yields nothing".

2009-04-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects/DomTests.cs: Fixed wrong unit test.

2009-04-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  test for "Bug 491019 - No intellisense for recursive
	  generics".

2009-04-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  tests for "Bug 491020 - Wrong typeof intellisense".

2009-04-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	  Added test for "Bug 491017 - No intellisense for static LINQ
	  queries".

2009-04-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	  It's all green again :)

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	  added test for "Bug 491016 - No intellisense for lambdas
	  inside linq query" (currently not working)

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	  added test for "Bug 487237 - Broken lambda intellisense".

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects/DomTests.cs: Added test for extension
	  method.

2009-03-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs:
	  (Revert to revision 130308)
